changes in the work secction

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 
                     <div class="container">
                         <div>
-                            <img src="images/Name-Variations.png" alt="Name Variations Table" class="image">
+                            <img src="images/name-variations.png" alt="Name Variations Table" class="image">
                         </div>
                        
                         <div class="middle">
